fixed overlap of arrow visibility

--- a/components.css
+++ b/components.css
@@ -38,23 +38,22 @@
 }
 
 .flip-card {
-  border: 1px solid #cfd8dc;
   background:  #cfd8dc;
+  border: 1px solid #cfd8dc;
   border-radius: 8px;
   height: 20vw;
   width: 25vw;
 }
 
 .flip-container {
+  background:  #cfd8dc;
 	perspective: 1000px;
 }
 
 .flipper {
-  height: 100%;
 	transition: 0.6s;
 	transform-style: preserve-3d;
 	position: relative;
-  width: 100%;
 }
 
 .flip-container:hover .flipper-vertical{
@@ -62,21 +61,17 @@
   transform: rotateX(180deg);
 }
 
-
 .vertical-front {
   backface-visibility: hidden;
-  height: 100%;
 	left: 0;
 	position: absolute;
 	top: 0;
 	transform: rotateX(0deg);
-  width: 100%
 }
 
 .vertical-back {
-  height: 100%;
+  backface-visibility: hidden;
 	transform: rotateX(180deg);
-  width: 100%
 }
 
 
@@ -87,16 +82,13 @@
 
 .horizontal-front {
 	backface-visibility: hidden;
-  height: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
 	transform: rotateY(0deg);
-  width: 100%
 }
 
 .horizontal-back {
-  height: 100%;
+  backface-visibility: hidden;
 	transform: rotateY(180deg);
-  width: 100%
 }
